[shell]: set $EDITOR as hx

--- a/.env_core
+++ b/.env_core
@@ -7,6 +7,7 @@
 : "${NUSHELL_PATH:=${GIZMO}/nushell}"
 : "${JSHELL:=${JOEY}/SHELL}"
 : "${CARGO_HOME:=${HOME}/.cargo}"
+: "${EDITOR:=hx}"
 
 _prepend_path() {
     [ -d "$1" ] || return 0
@@ -19,4 +20,4 @@ _prepend_path "$BIO_GIZMO"
 _prepend_path "$NUSHELL_PATH"
 unset -f _prepend_path
 
-export JOEY GIZMO BIO_GIZMO NUSHELL_PATH JSHELL CARGO_HOME PATH
+export JOEY GIZMO BIO_GIZMO NUSHELL_PATH JSHELL CARGO_HOME PATH EDITOR
