--- a/.env_core
+++ b/.env_core
@@ -8,6 +8,7 @@
 : "${JSHELL:=${JOEY}/SHELL}"
 : "${CARGO_HOME:=${HOME}/.cargo}"
 : "${EDITOR:=hx}"
+: "${CHOKIDAR_USEPOLLING:=1}"
 
 _prepend_path() {
     [ -d "$1" ] || return 0
@@ -20,4 +21,4 @@ _prepend_path "$BIO_GIZMO"
 _prepend_path "$NUSHELL_PATH"
 unset -f _prepend_path
 
-export JOEY GIZMO BIO_GIZMO NUSHELL_PATH JSHELL CARGO_HOME PATH EDITOR
+export JOEY GIZMO BIO_GIZMO NUSHELL_PATH JSHELL CARGO_HOME PATH EDITOR CHOKIDAR_USEPOLLING
